--- a/fronted/index.html
+++ b/fronted/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Gestión de Vuelos</title>
+    <title>Gestión de Vuelos</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-    <h2>Iniciar Sesión</h2>
+    <di class="login-container">
+        <h2>Iniciar Sesión</h2>
 
-    <input id="email" type="text" placeholder="Email"><br><br>
-    <input id="password" type="password" placeholder="Contraseña"><br><br>
+        <input id="email" type="text" placeholder="Email"><br><br>
+        <input id="password" type="password" placeholder="Contraseña"><br><br>
 
-    <button onclick="login()">Ingresar</button>
+        <button onclick="login()">Ingresar</button>
 
-    <p id="login-msg"></p>
+        <p id="login-msg"></p>
+    </div>
 
     <script src="js/app.js"></script>
 </body>
